# cmake-test

./: CMakeLists.txt  README.md
cmake-lib/: CMakeLists.txt  README.md
cmake-lib/src/: CMakeLists.txt
cmake-lib/src/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
cmake-lib/src/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
cmake-lib/src/lib3/: CMakeLists.txt  lib3.cpp  lib3.h
cmake-prog/: CMakeLists.txt  README.md  main.cpp
